--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,8 @@
-* {
-    margin: 0;
-    box-sizing: border-box;
+@import "reset";
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+
+html {
+    font-family: 'Nunito';
 }
 
 body {
@@ -12,32 +14,52 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
     &__body {
+        position: relative;
         background-color: aquamarine;
         width: 100%;
-        max-width: 30vw;
+        max-width: 400px;
         height: 100vh;
-        padding: 0 10px;
     }
 
     &__messages {
-        height: 95%;
-        overflow: scroll;
-    }
-    &__controls {
-        display: flex;
-        justify-content: center;
         width: 100%;
-        height: 5%;
-        bottom: 10px;
+        height: 95vh;
+        padding: 5px 0;
+        overflow: scroll;
+        overflow-x: hidden;
+
+        &::-webkit-scrollbar {
+            background-color: white;
+        }
+
+        &::-webkit-scrollbar-button {
+            display: none;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            border-radius: 10px;
+            background-color: darkgreen;
+        }
     }
+    
     &__box {
+
+        display: flex;
+        flex-direction: column;
         width: 80%;
-        box-sizing: content-box;
+        margin: 5px;
+        box-sizing: column;
         background-color: white;
         padding: 10px;
         border-radius: 15px;
+
+        h1 {
+            font-size: 10px;
+            color: darkslategray;
+            font-weight: bold;
+        }
 
         &--mine {
             margin-left: auto;
@@ -46,7 +68,44 @@ body {
         }
     }
 
-    &__input {
+    &__controls {
+        position: absolute;
+        bottom: 0;
+        padding: 5px;
+        background-color: darkgreen;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 100%;
+        height: 80px;
+    }
+
+    &__input-content {
+        margin: 0 2px;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__input {
+        margin: 2px 0;
+        width: 100%;
+        height: 100%;
+        border: none;
+        border-radius: 15px;
+        padding: 0 10px;
+
+        &:focus {
+            outline: none;
+        }
+    }
+
+    &__btn {
+        border: none;
+        border-radius: 10px;
+        padding: 10px;
+        color: rgb(66, 66, 66);
+        font-size: 15px;
     }
 }
