--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,8 +1,8 @@
 @import "reset";
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
 
 html {
-    font-family: 'Nunito';
+    font-family: "Nunito";
 }
 
 body {
@@ -19,14 +19,13 @@ body {
         position: relative;
         background-color: aquamarine;
         width: 100%;
+        height: 100%;
         max-width: 400px;
-        height: 100vh;
     }
 
     &__messages {
         width: 100%;
-        height: 95vh;
-        padding: 5px 0;
+        height: 85vh;
         overflow: scroll;
         overflow-x: hidden;
 
@@ -43,7 +42,7 @@ body {
             background-color: darkgreen;
         }
     }
-    
+
     &__box {
         display: flex;
         flex-direction: column;
@@ -53,11 +52,12 @@ body {
         background-color: white;
         padding: 10px;
         border-radius: 15px;
-        color: darkslategray;
+        color: rgb(156, 156, 156);
 
         h1 {
             font-size: 10px;
             font-weight: bold;
+            color: darkslategrey;
         }
 
         &--mine {
@@ -67,7 +67,6 @@ body {
     }
 
     &__controls {
-        position: absolute;
         bottom: 0;
         padding: 5px;
         background-color: darkgreen;
@@ -75,7 +74,7 @@ body {
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 80px;
+        overflow: auto;
     }
 
     &__input-content {
@@ -89,10 +88,9 @@ body {
     &__input {
         margin: 2px 0;
         width: 100%;
-        height: 100%;
         border: none;
         border-radius: 15px;
-        padding: 0 10px;
+        padding: 5px 10px;
 
         &:focus {
             outline: none;
