--- a/styles/_chat.scss
+++ b/styles/_chat.scss
@@ -7,13 +7,13 @@
         display: flex;
         justify-content: flex-end;
         padding: 5px;
-        background-color: darkgreen;
+        background-color: $subtle-grey;
 
     }
 
     &__body {
         position: relative;
-        background-color: aquamarine;
+        background-color: $bg-color;
         width: 100%;
         height: 100%;
         max-width: 400px;
@@ -26,7 +26,8 @@
         overflow-x: hidden;
 
         &::-webkit-scrollbar {
-            background-color: white;
+            width: 5px;
+            background-color: $bg-color;
         }
 
         &::-webkit-scrollbar-button {
@@ -34,8 +35,8 @@
         }
 
         &::-webkit-scrollbar-thumb {
-            border-radius: 10px;
-            background-color: darkgreen;
+            border-radius: 5px;
+            background-color: $subtle-grey;
         }
     }
 
@@ -48,21 +49,21 @@
         background-color: white;
         padding: 10px;
         border-radius: 15px;
-        color: rgb(156, 156, 156);
+        color: $text-color;
 
         h1 {
             font-size: 10px;
             font-weight: bold;
-            color: darkslategrey;
+            color: $secondary-color-dk;
         }
 
         &--mine {
             margin-left: auto;
-            background-color: greenyellow;
-            color: black;
+            background-color: $main-color;
+            color: white;
 
             h1 {
-                color: black;
+                color: white;
             }
         }
     }
@@ -70,7 +71,7 @@
     &__controls {
         bottom: 0;
         padding: 5px;
-        background-color: darkgreen;
+        background-color: $subtle-grey;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -89,20 +90,12 @@
     &__input {
         margin: 2px 0;
         width: 100%;
-        border: none;
-        border-radius: 15px;
+        border: 1px solid #CFD9EB !important;
+        border-radius: 5px;
         padding: 5px 10px;
 
         &:focus {
             outline: none;
         }
-    }
-
-    &__btn {
-        border: none;
-        border-radius: 10px;
-        padding: 10px;
-        color: rgb(66, 66, 66);
-        font-size: 15px;
     }
 }
