--- a/styles/main.css
+++ b/styles/main.css
@@ -262,12 +262,12 @@ input[type=button] {
       -ms-flex-pack: end;
           justify-content: flex-end;
   padding: 5px;
-  background-color: darkgreen;
+  background-color: #CFD9EB;
 }
 
 .chat__body {
   position: relative;
-  background-color: aquamarine;
+  background-color: #F6F9FE;
   width: 100%;
   height: 100%;
   max-width: 400px;
@@ -281,7 +281,8 @@ input[type=button] {
 }
 
 .chat__messages::-webkit-scrollbar {
-  background-color: white;
+  width: 5px;
+  background-color: #F6F9FE;
 }
 
 .chat__messages::-webkit-scrollbar-button {
@@ -289,8 +290,8 @@ input[type=button] {
 }
 
 .chat__messages::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background-color: darkgreen;
+  border-radius: 5px;
+  background-color: #CFD9EB;
 }
 
 .chat__box {
@@ -308,29 +309,29 @@ input[type=button] {
   background-color: white;
   padding: 10px;
   border-radius: 15px;
-  color: #9c9c9c;
+  color: #9BA3B8;
 }
 
 .chat__box h1 {
   font-size: 10px;
   font-weight: bold;
-  color: darkslategrey;
+  color: #03256C;
 }
 
 .chat__box--mine {
   margin-left: auto;
-  background-color: greenyellow;
-  color: black;
+  background-color: #06D6A0;
+  color: white;
 }
 
 .chat__box--mine h1 {
-  color: black;
+  color: white;
 }
 
 .chat__controls {
   bottom: 0;
   padding: 5px;
-  background-color: darkgreen;
+  background-color: #CFD9EB;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -360,21 +361,13 @@ input[type=button] {
 .chat__input {
   margin: 2px 0;
   width: 100%;
-  border: none;
-  border-radius: 15px;
+  border: 1px solid #CFD9EB !important;
+  border-radius: 5px;
   padding: 5px 10px;
 }
 
 .chat__input:focus {
   outline: none;
-}
-
-.chat__btn {
-  border: none;
-  border-radius: 10px;
-  padding: 10px;
-  color: #424242;
-  font-size: 15px;
 }
 
 .form {
@@ -392,8 +385,9 @@ input[type=button] {
 }
 
 .form__container {
-  background-color: aquamarine;
-  border-radius: 15px;
+  background-color: #F6F9FE;
+  color: #9BA3B8;
+  border-radius: 10px;
   width: 100%;
   max-width: 400px;
   display: -webkit-box;
@@ -408,6 +402,7 @@ input[type=button] {
 }
 
 .form__title {
+  color: #06D6A0;
   font-weight: bold;
   margin: 10px 0;
 }
@@ -415,22 +410,14 @@ input[type=button] {
 .form input {
   width: 100%;
   margin-bottom: 10px;
-  border: none;
-  border-radius: 15px;
+  border: 1px solid #CFD9EB !important;
+  border-radius: 5px;
   padding: 5px 10px;
 }
 
 .form input:focus {
+  border: 1px solid #06D6A0 !important;
   outline: none;
-}
-
-.form button {
-  border: none;
-  border-radius: 10px;
-  padding: 10px;
-  color: #424242;
-  font-size: 15px;
-  margin: 10px 0;
 }
 
 html {
@@ -440,6 +427,16 @@ html {
 body {
   width: 100%;
   height: 100%;
+}
+
+button {
+  background-color: #06D6A0;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  padding: 7px;
+  font-size: 15px;
+  margin: 10px 0;
 }
 
 .hidden {
