--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,10 @@
+$main-color: #06D6A0;
+$text-color: #9BA3B8;
+$subtle-grey: #CFD9EB;
+$secondary-color: #2E62F5;
+$secondary-color-dk: #03256C;
+$bg-color: #F6F9FE;
+
 @import "reset";
 @import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
 @import "chat";
@@ -11,6 +18,16 @@ body {
     width: 100%;
     height: 100%;
 }
+
+button {
+        background-color: $main-color;
+        color: white;
+        border: none;
+        border-radius: 10px;
+        padding: 7px;
+        font-size: 15px;
+        margin: 10px 0;
+    }
 
 .hidden {
     display: none;
